@@ -1,5 +1,7 @@
 = HEAD
 
+* Add response_request plugin allowing response object access to request object (jeremyevans)
+
 * Add default_status plugin for overriding the default response status (celsworth) (#47)
 
 * Make RodaCache synchronize access on MRI (jeremyevans)
